// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginButton when isLoggedIn returns false (snapshot testing) 1`] = `
<LoginControl
  isLoggedIn={[Function]}
>
  <LoginButton
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
      <img
        alt="loginImage"
        height="20"
        src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
        width="106"
      />
    </button>
  </LoginButton>
</LoginControl>
`;

exports[`renders LogoutButton when isLoggedIn returns true (snapshot testing) 1`] = `
<LoginControl
  isLoggedIn={[Function]}
>
  <LogoutButton
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
      Logout
    </button>
  </LogoutButton>
</LoginControl>
`;
